dded project to portfolio, removed WIP tag and fixed the overlapping form output div in the contact section

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -78,9 +78,10 @@
     }
     transform: translateY(100%);
     transition: $transition;
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    width: 100%;
+    left: 25%;
+    width: 50%;
     background-color: $dark_red;
     padding: 1em 0;
     text-align: center;
@@ -99,6 +100,8 @@
     }
   }
   #form_output {
+    width: 100% !important;
+    left: 0 !important;
     padding: 0;
   }
 }
